# EcoOrchestra

./: .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: app.py
output/: eco_20250719_174814.json  eco_20250719_174814.mid  test_output.mid
src/ecoorchestra/audio/: renderer.py
src/ecoorchestra/data/: fetcher.py
src/ecoorchestra/music/: env_to_prompt.py  generator.py  mapper.py  musicgen_infer.py
src/ecoorchestra/pipeline/: main_pipeline.py
tests/: test_fetcher.py  test_generator.py  test_mapper.py  test_renderer.py
